<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android=" http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- 系统 -->
    <string name="app_name">豆豆接送</string>
    <string name="about">关于</string>
    <string name="text_company_tel">联系电话：0898&#8211;32276980</string>
    <string name="text_version_code">当前版本&#160;v&#160;%s</string>
    <string name="exit_dialog_title">确定要退出吗？</string>
    <string name="more">更多</string>
    <string name="title_back_text">返回</string>
    <string name="network_is_not_available">当前网络不给力\n建议检查网络状态</string>
    <string name="network_is_not_found">当前无网络</string>
    <string name="choose_class">选择班级</string>
    <string name="drop_pick_mode">接送方式</string>
    <string name="sub_mode">考勤状态</string>
    <string name="manual_sign">手动打卡</string>
    <string name="manual_sign_info">提示：请点击“手动打卡”完成考勤</string>
    <string name="choose_student">请先选择学生</string>
    <string name="left_student_count">还有<xliff:g>%1$s</xliff:g>条记录未提交</string>
    <string name="tv_casual_leave">事假</string>
    <string name="tv_sick_leave">病假</string>
    <string name="tv_take_photo">拍照</string>
    <string name="upload_head_icon">上传头像</string>
    <string name="cut_head_icon">头像裁剪</string>

    <!-- 登录 -->
    <string name="button_text_login">登录</string>
    <string name="toast_login_error">登录信息不能为空</string>
    <string name="hint_input_username">用户名</string>
    <string name="hint_input_pwd">密码</string>
    <string name="remember_me">记住我</string>
    <!-- 通用 -->
    <string name="button_text_yes">好的</string>
    <string name="text_ensure">确定</string>
    <string name="button_text_no">取消</string>
    <string name="button_text_tips">提示</string>
    <string name="msg_install_speech_service">是否安装语音提示服务？</string>
    <string name="btn_txt_no">否</string>
    <string name="btn_txt_yes">是</string>
    <string name="user_image_no_browser">未找到图片浏览器</string>
    <string name="user_image_not_support">您的设备不支持拍照功能</string>
    <string name="user_image_no_sdcard">未找到SD卡，无法存储照片</string>
    <string name="user_image_load_fail">图片加载失败</string>
    <string name="center_no_find_file">文件没有发现</string>
    <string name="choose_photo_album">选择相册</string>
    <string name="choose_photo">选择照片</string>
    <string name="choose_photo_ok">完成</string>
    <string name="not_have_album">你还没有相册哦</string>
    <string name="upload_head_icon_success">上传头像成功</string>

</resources>