<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/iv_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:duplicateParentState="true"
        android:src="@drawable/arrow_up"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_arrow_up"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_casual_leave"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:background="@drawable/pop_middle_bg"
            android:gravity="center"
            android:text="@string/tv_casual_leave"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/view_divider_line"
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="#99000000" />

        <TextView
            android:id="@+id/tv_sick_leave"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:background="@drawable/pop_middle_bg"
            android:gravity="center"
            android:text="@string/tv_sick_leave"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/view_divider_line2"
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="#99000000" />

        <TextView
            android:id="@+id/tv_take_phote"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:background="@drawable/pop_middle_bg"
            android:gravity="center"
            android:onClick="true"
            android:text="@string/tv_take_photo"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:duplicateParentState="true"
        android:src="@drawable/send_msg_fail_window_resend_arrow_bg" />

</RelativeLayout>