<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_bg" >

    <ImageView
        android:id="@+id/iv_suer_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@null"
        android:src="@drawable/login_usericon" />

    <LinearLayout
        android:id="@+id/ll_login_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_suer_head"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_login_phone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edt_child_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_login_phone"
                android:background="@null"
                android:hint="@string/hint_input_username"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColorHint="#9c9c9c" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.7dp"
                android:layout_alignBottom="@id/edt_child_name"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_login_phone"
                android:background="#5c5B5B"
                android:contentDescription="@null" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_login_clock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/clock" />

            <EditText
                android:id="@+id/edt_tel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_login_clock"
                android:background="@null"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColorHint="#9c9c9c" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.7dp"
                android:layout_alignBottom="@id/edt_tel"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_login_clock"
                android:background="#5c5B5B"
                android:contentDescription="@null" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_login_info"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cb_selector"
            android:button="@null"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/news_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ll_remember_me"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/button_text_login"
        android:textColor="@color/white" />

</RelativeLayout>