<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg" >

    <include
        android:id="@+id/layout_title"
        layout="@layout/title_with_back_btn_wrap" />

    <LinearLayout
        android:id="@+id/layout_action"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/layout_title"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_choose_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_save_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_choose_class"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/choose_class"
                android:textColor="@color/main_blue"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:duplicateParentState="true"
                android:src="@drawable/expandable_arrow_expand" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drop_pick_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_save_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_drop_pick_mode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/drop_pick_mode"
                android:textColor="@color/main_blue"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:duplicateParentState="true"
                android:src="@drawable/expandable_arrow_expand" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_manual_sign"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/student_signing_selector"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/manual_sign"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_toast_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_action"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@color/red"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <GridView
        android:id="@+id/gv_student"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btn_manual_sign"
        android:layout_below="@id/tv_toast_info"
        android:cacheColorHint="@android:color/transparent"
        android:clickable="true"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:horizontalSpacing="10dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</RelativeLayout>